css/app.css
/* ... */
.darkScreen {
  margin: auto;
  background: rgba(0, 0, 0, 0.35);
  padding: 0 10px 10px 10px;
  height: inherit;
  position: absolute;
  top: 50px;
}

.hidden {
  display: none;
}

#home {
  top: 0;
  height: 100vh;
  width: 100vh;
  position: absolute;
}

.main {
  border-left: ivory;
  border-style: ridge;
  position: relative;
  display: block;
  height: 100vh;
  width: 100%;
  object-fit: cover;
}

.myVideo {
  display: block;
  height: 100%;
}

.rounded {
  border-radius: 50%;
  max-height: 170px;
}

.smallscreenHeader {
  width: 100%;
  height: 60vh;
  /* background-image: url('../images/lights-multicolor-static-background.png'); */
}

.smallscreenHeader h1 {
  color: rgba(255, 255, 255, .9);
  font-size: 2rem;
}

.smallscreenHeader p {
  color: white;
}

/* FLIP CARD */

.flip-card {
    -webkit-perspective: 1000;
            perspective: 1000;
    border: 0;
    background: transparent;
    margin-top: 10px;
  }
  
  .flip-card:hover .flip-card-inner,
  .flip-card.hover .flip-card-inner {
    -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg);
  }
  
  .flip-card,
  .flip-card-inner-front,
  .flip-card-inner-back {
    width: 100%;
    height: 20rem;
  }
  
  .flip-card-inner {
    transition: 0.6s;
    -webkit-transform-style: preserve-3d;
            transform-style: preserve-3d;
    position: relative;
    /* -webkit-backface-visibility: hidden; */
            /* backface-visibility: hidden; */
  }
  
  .flip-card-inner-front,
  .flip-card-inner-back {
    /* -webkit-backface-visibility: hidden; */
            /* backface-visibility: hidden; */
    position: fixed;
    top: 0;
    left: 0;
  }
  
  .flip-card-inner-front {
    z-index: 2;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-transform: translateZ(1px);
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
  
  .img-paws {
    background: url('../images/paws.png') 0 0 no-repeat;
    background-size: cover;
  }
  
  .img-bragging {
    background: url('../images/braggingrights.png') 0 0 no-repeat;
    background-size: cover;
    background-position: -120px;
  }
  
  .img-tricking {
    background: url('../images/tricking.png') 0 0 no-repeat;
    background-size: cover;
    background-position: -150px;
  }
  
  .img-clickamajiggy {
    background: url('../images/clickamajiggy.png') 0 0 no-repeat;
    background-size: cover;
    background-position: -10px;
  }
  
  .img-employees {
    background: url('../images/employeedir.gif') 0 0 no-repeat;
    background-size: cover;
    background-position: -110px;
  }
  
  .img-spartan {
    background: url('../images/spartan.png') 0 0 no-repeat;
    background-size: cover;
    background-position: -150px;
  }
  
  .img-virtuous {
    background: url('../images/virtuous-circle.png') 0 0 no-repeat;
    background-size: cover;
    background-position: -135px;
  }
  
  .img-got {
    background: url('../images/got-min.jpg') 0 0 no-repeat;
    background-size: cover;
    background-position: -70px;
  }
  
  .img-middle {
    background: url('../images/middle-ground.png') 0 0 no-repeat;
    background-size: cover;
    background-position: -120px;
  }
  
  .img-weather {
    background: url('../images/weather-dash-img.png') 0 0 no-repeat;
    background-size: cover;
  }

  .img-booksearch {
    background: url('../images/booksearch.png') 0 0 no-repeat;
    background-size: cover;
  }

  .img-miles {
    background: url('../images/project-miles.png') 0 0 no-repeat;
    background-size: cover;
    background-position: -70px;
  }
  
  /* title strip on front of flip card, not using */
  .flip-card-inner-front span {
    display: none;
    width: 100%;
    text-align: center; */
    /* background: rgba(254, 254, 254, 0.3); */
    /* background: rgb(126, 13, 101); */
    color: transparent; 
    padding: .25rem 0;
    margin-top: 50%;
    font-size: 1.25rem;
    font-weight: bold;
  }
  
  .flip-card-inner-back {
    -webkit-transform: rotateY(180deg) translateZ(1px);
    /* -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg); */
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
    text-align: center;
    background: rgb(255, 255, 255);
    border-width: thick;
    border-style: ridge;
    border-color: rgba(84, 84, 131, 0.9);
    padding: 2rem;
    color: rgb(58, 22, 56);
  }
  
  .flip-card-inner-back-title, .flip-card-inner-back h4 {
    font-weight: bold;
    color: rgb(94, 7, 89);
    line-height: 1;
  }
  
  .flip-card-inner-back-text {
    line-height: 1.2;
  }
  
  .flip-card-inner-back p {
    color: rgb(53, 48, 53);
    padding: 5px 15px 0px 15px;
    text-align: left;
  }


  /* ==================================== */
  /* BLOG CARDS */

  .glow:hover {
    box-shadow: 0px 0px 6px 6px cadetblue;
  }
  
  .card-article-hover {
    box-shadow: 0px 0px 7px #888888;
  }
  
  .card-article-hover .card-section {
    color: black;
    width: 90%;
    background: #fff;
    margin: 0 auto;
    padding-top: 25px;
    margin-top: -3rem;
    z-index: 2;
  }
  
  .card-article-hover .card-section .article-subtext {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 0.85rem;
    color: #2daebf;
  }
  
  .card-article-hover .card-section .article-title {
    font-weight: bold;
    font-family: ‘Georgia’, serif;
    font-size: 1.5rem;
    color: #000;
  }
  
  .card-article-hover .card-section .article-desc {
    font-family: ‘Georgia, serif;
    font-size: 1rem;
    color: #000;
  }
/* ... */

